# SkullKingAI

./: .gitignore  LICENSE.txt  README.md  main.py  main_test_simulation.py  pyproject.toml  run_eval.py  run_loop.sh  run_parallel.py  run_pruning.py  run_sleep_cycle.py
conf/: config.yaml
data/: elo_ratings.json
data/artifacts/: Rules_Found.md  Rules_Found_run1.md
scripts/: clear_reset.py  plot_training_curves.py  seed_memory.py  start_vllm.sh  visualize_memory.py
src/agents/: heuristic.py  llm_agent.py  llm_client.py
src/engine/: physics.py  state.py
src/memory/: action_cache.py  counterfactual.py  elo_tracker.py  pruner.py  rag_engine.py  reflector.py
src/prompts/personas/: forced_zero.txt  rational.txt
src/prompts/rules/: card_hierarchy.txt  game_intro.txt  scoring.txt  trick_mechanics.txt
src/utils/: play_by_play.py  prompt_loader.py  translators.py
tests/: test_counterfactual.py  test_env.py  test_llm_agent.py  test_llm_connection.py  test_physics.py  test_rag_fitness.py  test_reflector.py  test_translators.py
