[project]
name = "skullzero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "openai>=2.24.0",
    "pytest>=9.0.2",
    "vllm>=0.18.0",
]
